--- a/media/css/style.css
+++ b/media/css/style.css
@@ -170,5 +170,5 @@ a.button:active { background: rgb(152,15,0); } /* при нажатии */
 
 
 
-a.url1 {  text-decoration:underline; color: #333344; font-size:15px; font-weight:bold}
-a.url1:hover { text-decoration:underline; color:#f25100; font-size:15px; font-weight:bold}
+a {  text-decoration:underline; color: #333344; font-size:15px; font-weight:bold}
+a:hover { text-decoration:underline; color:#f25100; font-size:15px; font-weight:bold}
