CSS and visual changes to header

--- a/templates/main.html
+++ b/templates/main.html
@@ -3,10 +3,9 @@
 
 {% block title %}Прокуратура Одесской области{% endblock %}
 
-
-
 {% block header %}
-    <p align="right"><a href="/structure/" target="_blank" class="button">Структура</a></p>
+    <p align="center"><a href="/structure/" target="_blank" class="button">Структура</a></p>
+    <br><br>
     {% include filter_header %}
 {% endblock %}
 
