--- a/templates/base.html
+++ b/templates/base.html
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
     <link rel="icon" type="image/ico" href="/media/img/favicon.ico" />
-    <link rel="stylesheet" href="/media/css/site_style2.css" type="text/css" />
     <link rel="stylesheet" href="/media/css/style.css" type="text/css" />
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
 <header>
     <section class="headblock">
-        <a href="/" class="logo"><img src="http://od.gp.gov.ua/main2//img/d/gp.png" alt="" /></a>
-        <div class="logo1" style="  background: url('http://od.gp.gov.ua/main2//img/d/od.png') no-repeat scroll 0 0 transparent;"></div>
-        <div class="pageName" style="  background: url('http://od.gp.gov.ua/main2/img/d/text/TEXT_od.png') no-repeat scroll 0 0 transparent;"></div>
+        <a href="/" class="logo"><img src="/media/img/main/header/gp.png" alt="" /></a>
+        <div class="logo1"></div>
+        <div class="pageName"></div>
     </section>
 </header>
 {% block header %}{% endblock %}
