--- a/media/css/style.css
+++ b/media/css/style.css
@@ -121,7 +121,7 @@ h2 {
     font-weight: normal;
     font-family: 'Orienta', sans-serif;
     font-size: 30px;
-    line-height: 40px;
+    line-height: 30px;
 }
 
 h3 {
@@ -131,7 +131,7 @@ h3 {
     font-weight: normal;
     font-family: 'Orienta', sans-serif;
     font-size: 24px;
-    line-height: 40px;
+    line-height: 30px;
 }
 
 h4 {
@@ -247,4 +247,35 @@ header
 	font-size: 0px;
 	line-height: 0px;
     display: block;
+}
+
+
+.attr-table {
+    font-family:Arial, Helvetica, sans-serif;
+    color:#666;
+    font-size:12px;
+    text-shadow: 1px 1px 0px #fff;
+    background:#eaebec;
+    margin:20px;
+    border:#ccc 1px solid;
+    border-collapse:separate;
+    text-align: center;
+    padding:15px 15px 15px 15px;
+    width: 30%;
+
+    -moz-border-radius:3px;
+    -webkit-border-radius:3px;
+    border-radius:3px;
+
+    -moz-box-shadow: 0 1px 2px #d1d1d1;
+    -webkit-box-shadow: 0 1px 2px #d1d1d1;
+    box-shadow: 0 1px 2px #d1d1d1;
+}
+
+.attr-table tr td {
+    padding:3px 3px 3px 3px;
+}
+
+.attr-table th {
+    padding: 6px 3px 4px 3px;
 }
