--- a/templates/main_wt_filter.html
+++ b/templates/main_wt_filter.html
@@ -3,74 +3,69 @@
 
 {% block title %}Прокуратура Одесской области{% endblock %}
 
-
 {% block content %}
+    {#Прокуратура#}
     {% for po in employees_dict %}
         <h2>{{ po }}</h2>
-
-
-
+        {#Атрибуты Прокуратуры#}
+        {% with temp_node=po %}
+            {% include table_attribute %}
+        {% endwith %}
+        {#Работники Прокуратуры#}
         {% if employees_dict|tel_get:po|tel_get:'employees' %}
-
             <table class="simple-little-table" cellspacing='0'>
-
                 {% include table_header %}
                 {% for employee in employees_dict|tel_get:po|tel_get:'employees' %}
                     {% include table_loop %}
                 {% endfor %}
-
             </table>
-
         {% endif %}
-
+        {#Управление#}
         {% for department in employees_dict|tel_get:po|tel_get:'departments' %}
-
             <h3>{{ department }}</h3>
-
+            {#Атрибуты Управления#}
+            {% with temp_node=department %}
+                {% include table_attribute %}
+            {% endwith %}
+            {#Работники Управления#}
             {% if employees_dict|tel_get:po|tel_get:'departments'|tel_get:department|tel_get:'employees' %}
-
                 <table class="simple-little-table" cellspacing='0'>
-
                     {% include table_header %}
                     {% for employee in employees_dict|tel_get:po|tel_get:'departments'|tel_get:department|tel_get:'employees' %}
                         {% include table_loop %}
                     {% endfor %}
-
                 </table>
-
             {% endif %}
-
+            {#Отдел#}
             {% for division in employees_dict|tel_get:po|tel_get:'departments'|tel_get:department|tel_get:'divisions' %}
-
                 <h4>{{ division }}</h4>
-
+                {#Атрибуты Отдела#}
+                {% with temp_node=division %}
+                    {% include table_attribute %}
+                {% endwith %}
                 <table class="simple-little-table" cellspacing='0'>
-
                     {% include table_header %}
+                    {#Работники Отдела#}
                     {% for employee in employees_dict|tel_get:po|tel_get:'departments'|tel_get:department|tel_get:'divisions'|tel_get:division %}
                         {% include table_loop %}
                     {% endfor %}
                 </table>
             {% endfor %}
         {% endfor %}
-
-
-
+        {#Отдел#}
         {% for division in employees_dict|tel_get:po|tel_get:'divisions' %}
             <h4>{{ division }}</h4>
+            {#Атрибуты Отдела#}
+            {% with temp_node=division %}
+                {% include table_attribute %}
+            {% endwith %}
             <table class="simple-little-table" cellspacing='0'>
-
                 {% include table_header %}
+                {#Работники Отдела#}
                 {% for employee in employees_dict|tel_get:po|tel_get:'divisions'|tel_get:division %}
                     {% include table_loop %}
                 {% endfor %}
             </table>
         {% endfor %}
-
-
-
-
-
     {% endfor %}
-
 {% endblock %}
