--- a/templates/structure.html
+++ b/templates/structure.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load app_filters %}
 
-{% block title %}Структура{% endblock %}
+{% block title %}Структура Прокуратуры{% endblock %}
 
 
 {% block content %}
