--- a/templates/table_loop.html
+++ b/templates/table_loop.html
@@ -1,7 +1,22 @@
+{#Тут проверка на секретаря если это он нет выводим его#}
+{#как вариант проерка принадлежит ли секретарь по отделу управлению#}
+{#либо проверить на ролителя#}
+{#либо как вариант создать доп таблицу#}
 <tr>
     <td width='2%'>{{ forloop.counter }}</td>
     <td width='20%'>{{ employee }}</td>
     <td width='10%' title='Должность'>{{ employee.position }}</td>
     <td width='15%' title='Служебный телефон'>{{ employee.tel_work_escape|safe }}</td>
     <td width='15%' title='Мобильный телефон'>{{ employee.tel_private_escape|safe }}</td>
-</tr><!-- Table Data -->
+</tr>
+{% if employee.secretary %}
+    {% with employee=employee.secretary %}
+        <tr>
+            <td width='2%'></td>
+            <td width='20%'>{{ employee }}</td>
+            <td width='10%' title='Должность'>{{ employee.position }}</td>
+            <td width='15%' title='Служебный телефон'>{{ employee.tel_work_escape|safe }}</td>
+            <td width='15%' title='Мобильный телефон'>{{ employee.tel_private_escape|safe }}</td>
+        </tr>
+    {% endwith %}
+{% endif %}
