Add function for downloading files

--- a/templates/main.html
+++ b/templates/main.html
@@ -5,6 +5,7 @@
 {#Заголовок#}
 {% block header %}
     <p align="center"><a href="/structure/" target="_blank" class="button">Структура</a></p>
+    <p align="center"><a href="/file/" target="_blank" class="button">Файл</a></p>
     <br><br>
     {#Фильтр#}
     {% include filter_header %}
