--- a/templates/filter_header1.html
+++ b/templates/filter_header1.html
@@ -9,15 +9,12 @@
         </tr>
         <tr>
             <th><input type="text" name="employee" size="30"></th>
-
-            <th> <select name="prosecutors_office" class="SelectBox">
-                <option selected disabled>Выберите Прокуратуру</option>
+            <th> <select name="prosecutors_office" id="id_prosecutors_office">
+                <option selected value="" disabled>Выберите Прокуратуру</option>
                 {% for po in po_list %}
                     <option value={{ po.id }}>{{ po }}</option>
                 {% endfor %}
             </select></th>
-
-
             <th><input type="reset" value="Очистить"></th>
         </tr>
         <tr>
@@ -26,15 +23,9 @@
         </tr>
         <tr>
             <th><input type="text" name="telephone" size="30"></th>
-
-            <th> <select name="department" id="id_department" class="SelectBox">
+            <th> <select name="department" id="id_department" disabled="disabled">
                 <option selected value="" disabled>Выберите Управление</option>
-                {% for department in department_list %}
-                    <option value={{ department.id }}>{{ department }}</option>
-                {% endfor %}
             </select></th>
-
-
             <th><input type="submit" value="Поиск"></th>
         </tr>
         <tr>
@@ -43,13 +34,9 @@
         </tr>
         <tr>
             <th></th>
-
-
-            <th> <select name="division" id="id_division" disabled="disabled" class="SelectBox">
+            <th> <select name="division" id="id_division" disabled="disabled">
                 <option selected disabled>Выберите Отдел</option>
             </select></th>
-
-
         </tr>
     </table>
 </form>
