--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,10 @@
         <div class="pageName"></div>
     </section>
 </header>
+<nav class="topMenu">
+    <div class="static_menu"><a href="/structure/" target="_blank">Структура</a></div>
+    <div class="static_menu"><a href="/file/">Экспорт в Excel</a></div>
+</nav>
 {% block header %}{% endblock %}
 {% block left %}{% endblock %}
 {% block right %}{% endblock %}
