--- a/templates/filter_header.html
+++ b/templates/filter_header.html
@@ -1,6 +1,7 @@
+{% load staticfiles %}
 <br><br>
-<script type="text/javascript" src="/media/js/jquery.js"></script>
-<script type="text/javascript" src="/media/js/selects.js"></script>
+<script type="text/javascript" src="{% static "js/jquery.js" %}"></script>
+<script type="text/javascript" src="{% static "js/selects.js" %}"></script>
 
 <form name="filter" action="." method="GET" accept-charset="UTF-8" autocomplete="off">
     <table align="center">
