--- a/templates/table_loop.html
+++ b/templates/table_loop.html
@@ -9,7 +9,7 @@
     {% with employee=employee.secretary %}
         <tr>
             <td width='2%'></td>
-            <td width='20%'>{{ employee }}</td>
+            <td width='20%'></td>
             <td width='10%' title='Должность'>{{ employee.position }}</td>
             <td width='15%' title='Служебный телефон'>{{ employee.tel_work_escape|safe }}</td>
             <td width='15%' title='Мобильный телефон'>{{ employee.tel_private_escape|safe }}</td>
