--- a/templates/table_attribute.html
+++ b/templates/table_attribute.html
@@ -3,7 +3,7 @@
         {% if temp_node.address %}
             <tr>
                 <th>Адресс: </th>
-                <td>{{ temp_node.address }}</td>
+                <td><span  class="letter">{{ temp_node.address }}</span></td>
             </tr>
         {% endif %}
         {% if temp_node.tel_cod%}
