--- a/templates/table_loop.html
+++ b/templates/table_loop.html
@@ -1,7 +1,13 @@
 <tr>
     <td width='2%'>{{ forloop.counter }}</td>
-    <td width='20%'>{{ employee }}</td>
-    <td width='10%' title='Должность'>{{ employee.position }}</td>
+    <td width='20%'>
+        {% if employee.photo %}
+            <a href="{{ employee.photo }}">{{ employee }}</a>
+        {% else %}
+            {{ employee }}
+        {% endif %}
+    </td>
+    <td width='10%' title='Должность'></td>
     <td width='15%' title='Служебный телефон'>{{ employee.tel_work_escape|safe }}</td>
     <td width='15%' title='Мобильный телефон'>{{ employee.tel_private_escape|safe }}</td>
 </tr>
