--- a/media/css/style.css
+++ b/media/css/style.css
@@ -360,3 +360,17 @@ header
 #top-link:hover a{
 	background:#000;
 }
+
+.pop_up {
+    display: none;
+    position: fixed;
+    z-index:2000;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.pop_up_img {
+    height: 400px;
+    width: auto;
+}
