--- a/templates/table_loop.html
+++ b/templates/table_loop.html
@@ -2,7 +2,7 @@
     <td width='2%'>{{ forloop.counter }}</td>
     <td width='20%'>
         {% if employee.photo %}
-            <a href="{{ employee.photo }}" onmouseover="showLinkImage('float_{{ employee.id }}')"
+            <a href="/{{ employee.photo }}" onmouseover="showLinkImage('float_{{ employee.id }}')"
                onmouseout="hideLinkImage('float_{{ employee.id }}')">{{ employee }}</a>
             <div id="float_{{ employee.id }}" class="pop_up">
                 <img src="{{ employee.photo }}" class="pop_up_img"/>
