--- a/templates/base.html
+++ b/templates/base.html
@@ -5,28 +5,21 @@
     <link rel="icon" type="image/ico" href="{% static "img/favicon.ico" %}" />
     <link rel="stylesheet" href="{% static "css/style.css" %}" type="text/css" />
     <script type="text/javascript" src="{% static "js/jquery.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/popup.js" %}"></script>
     <title>{% block title %}{% endblock %}</title>
-    <script language = "JavaScript">
-        function showLinkImage(id) {
-            document.getElementById(id).style.display = "block";
-        }
-        function hideLinkImage(id) {
-            document.getElementById(id).style.display = "none";
-        }
-    </script>
 </head>
 <body>
 <header>
     <section class="headblock">
-        <a href="/" class="logo"><img src="/media/img/main/header/gp.png" alt="" /></a>
-        <div class="logo1"></div>
+        <a href="/" class="logo"><img src="{% static "img/main/header/gp.png" %}" alt="" /></a>
+        <a href="/admin/" class="logo1"><img src="{% static "img/main/header/od.png" %}" alt="" /></a>
         <div class="pageName"></div>
     </section>
 </header>
 <nav class="topMenu">
     <div class="static_menu"><a href="/structure/" target="_blank">Структура</a></div>
-    <div class="static_menu"><a href="/file/">Экспорт в Excel</a></div>
-{#    <div class="static_menu"><a href="/">Экспорт в Excel</a></div>#}
+{#    <div class="static_menu"><a href="/file/">Экспорт в Excel</a></div>#}
+    <div class="static_menu"><a>Экспорт в Excel</a></div>
 </nav>
 {% block header %}{% endblock %}
 <div id="content"> {% block content %}{% endblock %}</div>
