--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 <nav class="topMenu">
     <div class="static_menu"><a href="/structure/" target="_blank">Структура</a></div>
 {#    <div class="static_menu"><a href="/file/">Экспорт в Excel</a></div>#}
-    <div class="static_menu"><a>Экспорт в Excel</a></div>
+{#    <div class="static_menu"><a>Экспорт в Excel</a></div>#}
 </nav>
 {% block header %}{% endblock %}
 <div id="content"> {% block content %}{% endblock %}</div>
